Fix truncated roles

--- a/apps/maptio/src/app/modules/circle-map/helper-avatar/helper-avatar.component.scss
+++ b/apps/maptio/src/app/modules/circle-map/helper-avatar/helper-avatar.component.scss
@@ -45,4 +45,5 @@
 
 .helper-avatar__role {
   margin-left: -0.25rem;
+  white-space: break-spaces;
 }
